--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="icon" href="/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>제주여행도우미</title>
+    <title>도르멍 탐라</title>
 </head>
 <body>
 <div id="root"></div>
