--- a/public/design/3-1.ID.html
+++ b/public/design/3-1.ID.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>교통수단</title>
+    <title>이름</title>
     <style>
       /* 기본 스타일 설정 */
       @font-face {
@@ -14,52 +14,48 @@
         font-style: normal;
       }
       body {
-        font-family: "RixXladywatermelonR", sans-serif; /* 글꼴 설정 */
+        font-family: "RixXladywatermelonR", sans-serif;
         display: flex;
-        justify-content: center; /* 수평 방향 중앙 정렬 */
-        align-items: center; /* 수직 중앙 정렬 */
-        flex-direction: column; /* 정렬 방향 설정 */
-        /* 여백 제거 */
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
         margin: 0;
         padding: 0;
-        /* 배경 이미지 설정  */
-        background-image: url("./static/images/trans.jpg");
-        background-size: cover; /* 배경 이미지를 화면 전체에 맞춤 */
-        background-position: center; /* 이미지가 가운데 오도록 설정 */
-        background-attachment: fixed; /* 스크롤 시 배경이 고정되도록 설정 */
-        background-repeat: no-repeat; /* 이미지 반복 방지 */
+        background-image: url("./static/images/main.jpg");
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
       }
-      /* 질문 */
       .text {
-        /* 문구 고정 */
-        display: fixed;
-        /* 중앙 정렬 */
-        justify-content: center;
         font-size: 4.5em;
-        margin-top: 33vh;
+        margin-top: 20vh;
+        color: black;
       }
-      /* flex 버튼 컨테이너 */
-      .button-container {
-        display: flex;
-        gap: 5vw; /* 버튼 사이 간격 설정 */
-        justify-content: center;
+      /* 입력 상자 스타일 */
+      .input-field {
+        font-family: "RixXladywatermelonR", sans-serif;
+        font-size: 1.5em;
+        padding: 10px;
+        border: 2px solid #7ed957;
+        border-radius: 10px;
+        outline: none;
+        margin-top: 5vh;
       }
       .button {
-        display: fixed;
         font-family: "RixXladywatermelonR", sans-serif;
-        background-color: #7ed957; /* 버튼 색상 */
+        background-color: #7ed957;
         color: black;
         border: none;
         border-radius: 5vh;
-        padding: 2vh 4vw;
-        font-size: 2em;
+        padding: 1vh 4vw;
+        font-size: 1.5em;
         cursor: pointer;
         transition: background-color 0.3s;
-        margin-top: 29vh;
+        margin-top: 5vh;
       }
-      /* 버튼 클릭시 변경 */
       .button:hover {
-        background-color: #feac36; /* 버튼 호버 색상 */
+        background-color: #feac36;
       }
       /* 하단 아이콘 */
       .icon-before {
@@ -96,13 +92,9 @@
     </style>
   </head>
   <body>
-    <p class="text">제주, 어떤 교통수단을 이용하고 싶으신가요?</p>
-    <div class="button-container">
-      <button class="button">&nbsp;자동차&nbsp;</button>
-      <button class="button">오토바이</button>
-      <button class="button">대중교통</button>
-      <button class="button">&nbsp;뚜벅이&nbsp;</button>
-    </div>
+    <p class="text">당신의 이름을 입력해주세요.</p>
+    <input type="text" class="input-field" placeholder="이름을 입력하세요" />
+    <button class="button">제출</button>
     <div class="icon-before"></div>
     <div class="icon-next"></div>
     <p class="we">ⓒ 2024. Jeju 넘는 곰 All rights reserved.</p>
