--- a/public/design/3_Gender.html
+++ b/public/design/3_Gender.html
@@ -1,122 +1,139 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>성별</title>
-    <style>
-      /* 기본 스타일 설정 */
-      @font-face {
-        font-family: "RixXladywatermelonR";
-        src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2408-4@1.0/RixXladywatermelonR.woff2")
-          format("woff2");
-        font-weight: normal;
-        font-style: normal;
-      }
-      body {
-        font-family: "RixXladywatermelonR", sans-serif; /* 글꼴 설정 */
-        display: flex;
-        justify-content: center; /* 수평 방향 중앙 정렬 */
-        align-items: center; /* 수직 중앙 정렬 */
-        flex-direction: column; /* 정렬 방향 설정 */
-        /* 여백 제거 */
-        margin: 0;
-        padding: 0;
-        /* 배경 이미지 설정  */
-        background-image: url("./static/images/main.jpg");
-        background-size: cover; /* 배경 이미지를 화면 전체에 맞춤 */
-        background-position: center; /* 이미지가 가운데 오도록 설정 */
-        background-attachment: fixed; /* 스크롤 시 배경이 고정되도록 설정 */
-        background-repeat: no-repeat; /* 이미지 반복 방지 */
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>성별</title>
+  <style>
+    /* 기본 스타일 설정 */
+    @font-face {
+    font-family: 'RixXladywatermelonR';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-4@1.0/RixXladywatermelonR.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+  }
+    body {
+      font-family: 'RixXladywatermelonR',sans-serif; /* 글꼴 설정 */      
+      display: flex;
+      justify-content: center; /* 수평 방향 중앙 정렬 */ 
+      align-items: center; /* 수직 중앙 정렬 */
+      flex-direction: column;/* 정렬 방향 설정 */
+       /* 여백 제거 */
+      margin: 0; 
+      padding: 0;
+       /* 배경 이미지 설정  */
+      background-image: url('./static/images/gender.jpg');
+      background-size: cover; /* 배경 이미지를 화면 전체에 맞춤 */
+      background-position: center; /* 이미지가 가운데 오도록 설정 */
+      background-attachment: fixed; /* 스크롤 시 배경이 고정되도록 설정 */
+      background-repeat: no-repeat; /* 이미지 반복 방지 */
+    }
+    .text-focus-in {
+    	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;  
+    }
       /* 질문 */
-      .text {
-        /* 문구 고정 */
-        display: fixed;
-        /* 중앙 정렬 */
-        justify-content: center;
-        font-size: 4.5em;
-        margin-top: 33vh;
+    .text {
+      /* 문구 고정 */
+      display: fixed;
+      /* 중앙 정렬 */
+      justify-content: center;
+      font-size: 4.5em;
+      margin-top : 33vh;
+    }
+
+    /* flex 버튼의 컨테이너 */
+    .button-container {
+      display: flex;
+      gap: 9vw; /* 버튼 사이 간격 설정 */
+      justify-content: center;
+    }
+    /* 버튼 */
+    .button {
+      display: fixed;
+      font-family: 'RixXladywatermelonR',sans-serif;
+      background-color: #7ed957; /* 버튼 색상 */
+      color: black;
+      border: none;
+      border-radius: 5vh;
+      padding:  2vh 5vw;
+      font-size: 2em;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      margin-top: 29vh;
+    }
+    /* 버튼 클릭시 변경사항 */
+    .button:hover {
+      background-color: #feac36; /* 버튼 호버 색상 */
+    }    
+    /* 하단 아이콘 */
+    .icon-before {
+      display: fixed;
+      position: absolute;
+      bottom: 3%;
+      left: 2%;
+      width: 85px;
+      height: 93px;
+      background: url('./static/images/before_gul.jpg') no-repeat center;
+      background-size: cover;
+      border : none;
+      cursor:pointer;
+    } 
+    /* 하단 아이콘 */
+    .icon-next {
+      display: fixed;
+      position: absolute;
+      bottom: 3%;
+      right: 2%;
+      width: 83px;
+      height: 89px;
+      background: url('./static/images/next_gul.jpg') no-repeat center;
+      background-size: cover;
+      border : none;
+      cursor:pointer;
+    } 
+    .we{
+      display: fixed;
+      position: absolute;
+      bottom: 1%;
+      color: #adb5bd;
+    } 
+    @-webkit-keyframes text-focus-in {
+      0% {
+        -webkit-filter: blur(12px);
+                filter: blur(12px);
+        opacity: 0;
       }
-      .boy_girl {
-        display: fixed;
-        position: absolute;
-        margin-top: 26vh;
-        width: 130px;
-        height: 120px;
-        background: url("./static/images/gender.jpg") no-repeat center;
-        background-size: cover;
-        transform: scaleX(-1);
-        border: none;
-        cursor: pointer;
+      100% {
+        -webkit-filter: blur(0px);
+                filter: blur(0px);
+        opacity: 1;
       }
-      /* flex 버튼의 컨테이너 */
-      .button-container {
-        display: flex;
-        gap: 14vw; /* 버튼 사이 간격 설정 */
-        justify-content: center;
+    }
+    @keyframes text-focus-in {
+      0% {
+        -webkit-filter: blur(12px);
+                filter: blur(12px);
+        opacity: 0;
       }
-      /* 버튼 */
-      .button {
-        display: fixed;
-        font-family: "RixXladywatermelonR", sans-serif;
-        background-color: #7ed957; /* 버튼 색상 */
-        color: black;
-        border: none;
-        border-radius: 5vh;
-        padding: 2vh 5vw;
-        font-size: 2em;
-        cursor: pointer;
-        transition: background-color 0.3s;
-        margin-top: 29vh;
+      100% {
+        -webkit-filter: blur(0px);
+                filter: blur(0px);
+        opacity: 1;
       }
-      /* 버튼 클릭시 변경사항 */
-      .button:hover {
-        background-color: #feac36; /* 버튼 호버 색상 */
-      }
-      /* 하단 아이콘 */
-      .icon-before {
-        display: fixed;
-        position: absolute;
-        bottom: 3%;
-        left: 2%;
-        width: 85px;
-        height: 93px;
-        background: url("./static/images/before_gul.jpg") no-repeat center;
-        background-size: cover;
-        border: none;
-        cursor: pointer;
-      }
-      /* 하단 아이콘 */
-      .icon-next {
-        display: fixed;
-        position: absolute;
-        bottom: 3%;
-        right: 2%;
-        width: 83px;
-        height: 89px;
-        background: url("./static/images/next_gul.jpg") no-repeat center;
-        background-size: cover;
-        border: none;
-        cursor: pointer;
-      }
-      .we {
-        display: fixed;
-        position: absolute;
-        bottom: 1%;
-        color: #adb5bd;
-      }
-    </style>
-  </head>
-  <body>
-    <p class="text">제주, 여행자분의 성별을 알려주시겠어요?</p>
+    }
+
+  </style>
+</head>
+<body>
+    <p class="text text-focus-in">제주, 여행자분의 성별을 알려주시겠어요?</p>
     <div class="button-container">
       <button class="button">남성</button>
       <div class="boy_girl"></div>
       <button class="button">여성</button>
-    </div>
-    <div class="icon-before"></div>
-    <div class="icon-next"></div>
-    <p class="we">ⓒ 2024. Jeju 넘는 곰 All rights reserved.</p>
-  </body>
+  </div>
+  <div class="icon-before"></div>
+  <div class="icon-next"></div>
+  <p class="we">ⓒ 2024. Jeju 넘는 곰 All rights reserved.</p>
+</body>
 </html>
