--- a/public/design/9_Image.html
+++ b/public/design/9_Image.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>구성원</title>
+  <title>이미지 선택</title>
   <style>
     /* 기본 스타일 설정 */
     @font-face {
@@ -22,25 +22,12 @@
       margin: 0; 
       padding: 0;
        /* 배경 이미지 설정  */
-      background-image: url('./static/images/top_main.jpg');
+      background-image: url('./static/images/image.jpg');
       background-size: cover; /* 배경 이미지를 화면 전체에 맞춤 */
       background-position: center; /* 이미지가 가운데 오도록 설정 */
       background-attachment: fixed; /* 스크롤 시 배경이 고정되도록 설정 */
       background-repeat: no-repeat; /* 이미지 반복 방지 */
     }
-    .mung {
-      display: fixed;
-      position: absolute;
-      top: 22vh;
-      right: 26vw;
-      width: 110px;
-      height: 89px;
-      background: url('./static/images/mung.jpg') no-repeat center;
-      background-size: cover;
-      border : none;
-      cursor:pointer;
-      z-index: -1;
-    } 
     .text-focus-in {
     	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;  
@@ -54,35 +41,7 @@
       font-size: 4.5em;
       margin-top : 17vh;
     }
-    /* flex 버튼 컨테이너 */
-    .button-container {
-      display: flex;
-      flex-direction: column; /* 버튼 행을 수직으로 배치 */
-  }
-    .button-row {
-      display: flex;
-        gap: 12vh; /* 버튼 사이 간격 */
-        justify-content: center;
-        margin-bottom:9vh;
-    }    
 
-    .button {
-      display: fixed;
-      font-family: 'RixXladywatermelonR',sans-serif;
-      background-color: #7ed957; /* 버튼 색상 */
-      color: black;
-      border: none;
-      border-radius: 5vh;
-      font-size: 2em;
-      cursor: pointer;
-      transition: background-color 0.3s;
-      padding : 2vh 4vw;
-      margin-top: 4vh;
-    }
-
-    .button:hover {
-      background-color: #feac36; /* 버튼 호버 색상 */
-    }
     /* 하단 아이콘 */
     .icon-before {
       display: fixed;
@@ -114,7 +73,7 @@
       position: absolute;
       bottom: 1%;
       color: #adb5bd;
-    }    
+    } 
     @-webkit-keyframes text-focus-in {
       0% {
         -webkit-filter: blur(12px);
@@ -142,22 +101,7 @@
   </style>
 </head>
 <body>
-    <p class="text text-focus-in">제주, 누구와 함께 떠나시나요 ?</p>
-    <div class="mung"></div>
-    <div class="button-container">
-        <div class="button-row">
-            <button class="button">나혼자 씩씩하게</button>
-            <button class="button">친구와 사이좋게</button>
-          </div>
-          <div class="button-row">
-            <button class="button">부모님과 즐겁게</button>
-            <button class="button">아이와 손을잡고</button>
-          </div>
-          <div class="button-row">
-            <button class="button">연인과 다정하게</button>
-            <button class="button">반려동물과 함께</button>
-          </div>
-        </div>
+    <p class="text text-focus-in">제주, 마음에 드는 사진을 선택해주세요.</p>
         <div class="icon-before"></div>
         <div class="icon-next"></div>
   <p class="we">ⓒ 2024. Jeju 넘는 곰 All rights reserved.</p>
