--- a/public/design/9_Season.html
+++ b/public/design/9_Season.html
@@ -22,7 +22,7 @@
       margin: 0; 
       padding: 0;
        /* 배경 이미지 설정  */
-      background-image: url('./static/images/season.jpg');
+      background-image: url('static/images/season.jpg');
       background-size: cover; /* 배경 이미지를 화면 전체에 맞춤 */
       background-position: center; /* 이미지가 가운데 오도록 설정 */
       background-attachment: fixed; /* 스크롤 시 배경이 고정되도록 설정 */
@@ -76,7 +76,7 @@
       left: 2%;
       width: 85px;
       height: 93px;
-      background: url('./static/images/before_gul.jpg') no-repeat center;
+      background: url('static/images/before_gul.jpg') no-repeat center;
       background-size: cover;
       border : none;
       cursor:pointer;
@@ -89,7 +89,7 @@
       right: 2%;
       width: 83px;
       height: 89px;
-      background: url('./static/images/next_gul.jpg') no-repeat center;
+      background: url('static/images/next_gul.jpg') no-repeat center;
       background-size: cover;
       border : none;
       cursor:pointer;
